fixes overflows in main

--- a/client/src/pages/AllBluRays/AllBluRays.css
+++ b/client/src/pages/AllBluRays/AllBluRays.css
@@ -49,7 +49,7 @@
 }
 
 .AllBluRays .list {
-    height: calc(100vh - 440px);
+    height: calc(100vh - 450px);
     margin: 20px 0;
     border-top: 2px solid #fff;
     border-bottom: 2px solid #fff;
@@ -68,12 +68,12 @@
 
 @media screen and (min-width: 580px) {
     .AllBluRays .list {
-        height: calc(100vh - 380px);
+        height: calc(100vh - 390px);
     }
 }
 
 @media screen and (min-width: 765px) {
     .AllBluRays .list {
-        height: calc(100vh - 360px);
+        height: calc(100vh - 370px);
     }
 }
