--- a/client/src/pages/ShowBluRay/ShowBluRay.css
+++ b/client/src/pages/ShowBluRay/ShowBluRay.css
@@ -1,5 +1,5 @@
 .ShowBluRay{
-    height: calc(100vh - 280px);
+    height: calc(100vh - 300px);
     overflow-y: scroll;
 }
 
@@ -70,7 +70,7 @@
 
 @media screen and (min-width: 580px) {
     .ShowBluRay{
-        height: calc(100vh - 240px);
+        height: calc(100vh - 250px);
     }
     
 }
