--- a/client/src/pages/User/User.css
+++ b/client/src/pages/User/User.css
@@ -44,7 +44,7 @@
 }
 
 .User .list{
-    height: calc(100vh - 460px);
+    height: calc(100vh - 470px);
     margin: 20px 0;
     border-top: 2px solid;
     border-bottom: 2px solid;
